# mdviz

./: INSTALL.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup_dev.py
examples/: example_analysis.py  mdviz_tutorial.ipynb
mdviz/: __init__.py  clustering.py  trajectory.py  utils.py  visualization.py
mdviz/examples/: __init__.py  demo.py
tests/: test_mdviz.py
