[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdviz"
version = "0.1.0"
description = "A simple, user-friendly toolkit for MD trajectory analysis (PCA + clustering + visualization)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Justin K. Kirkland", email = "justin.kirkland.phd@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "MDAnalysis>=2.4.0",
    "mdtraj>=1.9.7",
    "scikit-learn>=1.3.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "py3Dmol>=2.0.0",
    "seaborn>=0.11.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/JustinKyleKirkland/mdviz"
Repository = "https://github.com/JustinKyleKirkland/mdviz"
Issues = "https://github.com/JustinKyleKirkland/mdviz/issues"
Documentation = "https://github.com/JustinKyleKirkland/mdviz#readme"

[project.scripts]
mdviz-demo = "mdviz.examples.demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdviz*"]

[tool.setuptools.package-data]
mdviz = ["examples/*.py", "examples/*.ipynb"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
